fixed bottom slides getting clipped off

--- a/assets/css/events2grid.css
+++ b/assets/css/events2grid.css
@@ -35,6 +35,7 @@
   flex-direction:column;
   border-radius:2rem;
   color: #000;
+  padding-bottom: 4px;
 }
 
 .swiper-slide img {
